--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
+  "homepage": "https://tiennecore.github.io/quick_launch",
   "scripts": {
+    "deploy" : "npm run build&&gh-pages -d build",
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
   "dependencies": {
     "assets": "^3.0.1",
+    "gh-pages": "^3.2.3",
     "parcel-plugin-asset-copier": "^1.1.0",
     "parcel-plugin-html-root-syntax": "0.0.3",
     "scss": "^0.2.4"
