--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
-  "homepage": "https://tiennecore.github.io/quick_launch",
+  "homepage": "zesrdfdgfyhjbn,",
   "scripts": {
-    "deploy" : "npm run build&&gh-pages -d build",
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "prebuild-dev": "shx rm -rf dist/*",
+    "build-dev": "parcel build index.html --no-minify --public-url ./",
+    "prebuild": "shx rm -rf dist/*",
+    "build": "parcel build index.html --public-url ./",
+    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
   },
   "dependencies": {
     "assets": "^3.0.1",
     "gh-pages": "^3.2.3",
     "parcel-plugin-asset-copier": "^1.1.0",
     "parcel-plugin-html-root-syntax": "0.0.3",
+    "push-dir": "^0.4.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
+    "shx": "^0.3.2",
     "parcel-bundler": "latest",
     "sass": "^1.26.11",
     "typescript": "^4.4.3"
