--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
-  "homepage": "zesrdfdgfyhjbn,",
+  "homepage": "https://tiennecore.github.io/quick_launch",
   "scripts": {
+    "build" : "parcel build index.html --public-url /quicklaunch/",
     "start": "parcel index.html",
-    "prebuild-dev": "shx rm -rf dist/*",
-    "build-dev": "parcel build index.html --no-minify --public-url ./",
-    "prebuild": "shx rm -rf dist/*",
-    "build": "parcel build index.html --public-url ./",
-    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "assets": "^3.0.1",
     "gh-pages": "^3.2.3",
     "parcel-plugin-asset-copier": "^1.1.0",
     "parcel-plugin-html-root-syntax": "0.0.3",
-    "push-dir": "^0.4.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
-    "shx": "^0.3.2",
     "parcel-bundler": "latest",
     "sass": "^1.26.11",
     "typescript": "^4.4.3"
